TODO
* add tests

20160106
* 2016 update

20150104
* 2015 update

20141018
* changes for deployment

20141012
* worked on utility scripts

20140920
* changes for project site move

20140912
* added clear cache entry functionality

20140601
* updated dependencies

20140521
* worked on stand-alone usage

20140105
* 2014 update
* updated dependencies

20130929
* updated dependencies

20130908
* updated dependencies
* added libcthreads build support

20130718
* remove unnecessary restriction in library include headers

20130409
* renamed libfcache_cache_clear to libfcache_cache_empty

20130407
* updated dependencies

20130406
* code clean up
* updated dependencies
* updated msvscpp files

20130404
* textual changes
* updated include header
* updated libfcache.3 man page

20130401
* 2013 update
* updated dependencies

20121211
* created stand-alone version based on libfguid
