@@ -1,6 +1,9 @@
 TODO
 * add tests
 
+20160124
+* added cache resize function
+
 20160106
 * 2016 update
 
